# ChangeLog for dev-util/gtk-doc
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-doc/ChangeLog,v 1.47 2005/06/21 09:54:16 leonardop Exp $

  22 Jun 2005; Leonardo Boshell <leonardop@gentoo.org> gtk-doc-1.3-r1.ebuild,
  gtk-doc-1.2-r1.ebuild, gtk-doc-1.1.ebuild:
  Remove xhtml1 block. The problems being blamed on xhtml1 were unrelated.
  In case real problems arise, the block is not a reasonable solution. See
  bug #33843.

  17 Jun 2005; Michael Hanselmann <hansmi@gentoo.org> gtk-doc-1.3-r1.ebuild:
  Stable on ppc.

  11 Jun 2005; Olivier Crête <tester@gentoo.org> gtk-doc-1.3-r1.ebuild:
  Stable on amd64

  06 Jun 2005; Markus Rothe <corsair@gentoo.org> gtk-doc-1.3-r1.ebuild:
  Stable on ppc64

  27 May 2005; Gustavo Zacarias <gustavoz@gentoo.org> gtk-doc-1.3-r1.ebuild:
  Stable on sparc

  27 May 2005; Leonardo Boshell <leonardop@gentoo.org> gtk-doc-1.3-r1.ebuild,
  gtk-doc-1.2-r1.ebuild, gtk-doc-1.1.ebuild:
  Marking 1.3-r1 stable on x86. Updated HOMEPAGE.

  20 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> gtk-doc-1.2-r1.ebuild:
  Stable on ppc.

  08 Apr 2005; Markus Rothe <corsair@gentoo.org> gtk-doc-1.2-r1.ebuild,
  gtk-doc-1.3.ebuild, gtk-doc-1.3-r1.ebuild:
  Stable on ppc64/added ~ppc64 to KEYWORDS

*gtk-doc-1.3-r1 (05 Apr 2005)

  05 Apr 2005; Leonardo Boshell <leonardop@gentoo.org> gtk-doc-1.3-r1.ebuild,
  files/gtk-doc-1.3-declaration.patch:
  New revision, includes a patch to correct the SGML declaration, which was
  breaking some packages. Resolves bug #86716.

*gtk-doc-1.3 (09 Mar 2005)

  09 Mar 2005; Leonardo Boshell <leonardop@gentoo.org> gtk-doc-1.3.ebuild:
  New release. Resolves bug #81081.

  06 Feb 2005; Simon Stelling <blubb@gentoo.org> gtk-doc-1.2-r1.ebuild:
  stable on amd64

  19 Dec 2004; Bryan Ãstergaard <kloeri@gentoo.org> gtk-doc-1.2-r1.ebuild:
  Stable on alpha.

  23 Nov 2004; Gustavo Zacarias <gustavoz@gentoo.org> gtk-doc-1.2-r1.ebuild:
  Stable on sparc
