@@ -1,8 +1,8 @@
-MD5 bc66bfd8259075cb135c0b2d2b670224 ChangeLog 5552
-MD5 68475e195ea8dfe88042c3bf550ca616 gtk-doc-1.1.ebuild 932
-MD5 731d8b6086a2e340d00f698a80196b2e gtk-doc-1.2-r1.ebuild 1001
+MD5 6846363cfefc85c5ff01f91c12b8d57e ChangeLog 5801
+MD5 f002a5762e9733c1c4302834540a4bb0 gtk-doc-1.1.ebuild 933
+MD5 a585f2d7d6ddb0243d8b3c53d774d01d gtk-doc-1.2-r1.ebuild 999
 MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
-MD5 b8fea84a8c5aca8a726a9316136a6425 gtk-doc-1.3-r1.ebuild 1140
+MD5 75de8bcd1cd6b0c04b8eb449d221a39a gtk-doc-1.3-r1.ebuild 1138
 MD5 c036d436f5c42ec78ef0bb5507eb5437 files/digest-gtk-doc-1.1 64
 MD5 9e9bf533df75a1c8173b97715f5391a6 files/digest-gtk-doc-1.2-r1 64
 MD5 01e1d20270319035161fbafc0d87132c files/gtk-doc-1.3-declaration.patch 372
