@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-doc/gtk-doc-1.1.ebuild,v 1.22 2005/06/21 09:54:16 leonardop Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-doc/gtk-doc-1.1.ebuild,v 1.23 2005/06/24 02:15:52 leonardop Exp $
 
 inherit gnome.org
 
@@ -13,7 +13,7 @@ SLOT="0"
 KEYWORDS="ia64 amd64 x86 ppc sparc alpha hppa mips ppc64"
 
 RDEPEND=">=app-text/openjade-1.3.1
-	=app-text/docbook-xml-dtd-4.1*
+	~app-text/docbook-xml-dtd-4.1.2
 	>=app-text/docbook-dsssl-stylesheets-1.40
 	>=dev-lang/perl-5.6
 	dev-libs/libxslt
