@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-doc/gtk-doc-1.2-r1.ebuild,v 1.12 2005/06/21 09:54:16 leonardop Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-doc/gtk-doc-1.2-r1.ebuild,v 1.13 2005/06/24 02:15:52 leonardop Exp $
 
 inherit elisp-common gnome.org
 
@@ -14,8 +14,8 @@ KEYWORDS="x86 ppc sparc ~mips arm alpha hppa amd64 ia64 s390 ppc64"
 IUSE="emacs"
 
 DEPEND=">=app-text/openjade-1.3.1
-	=app-text/docbook-sgml-dtd-3.0*
-	=app-text/docbook-xml-dtd-4.1.2*
+	~app-text/docbook-sgml-dtd-3.0
+	~app-text/docbook-xml-dtd-4.1.2
 	app-text/docbook-xsl-stylesheets
 	>=app-text/docbook-dsssl-stylesheets-1.40
 	>=dev-lang/perl-5.6
