@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-doc/gtk-doc-1.3-r1.ebuild,v 1.8 2005/06/21 09:54:16 leonardop Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-doc/gtk-doc-1.3-r1.ebuild,v 1.9 2005/06/24 02:15:52 leonardop Exp $
 
 inherit eutils elisp-common gnome.org
 
@@ -13,8 +13,8 @@ KEYWORDS="~alpha amd64 ~hppa ~ia64 ~mips ppc ppc64 ~s390 sparc x86"
 IUSE="emacs"
 
 DEPEND=">=app-text/openjade-1.3.1
-	=app-text/docbook-sgml-dtd-3.0*
-	=app-text/docbook-xml-dtd-4.1.2*
+	~app-text/docbook-sgml-dtd-3.0
+	~app-text/docbook-xml-dtd-4.1.2
 	app-text/docbook-xsl-stylesheets
 	>=app-text/docbook-dsssl-stylesheets-1.40
 	>=dev-lang/perl-5.6
