@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/gtk-doc
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-doc/ChangeLog,v 1.47 2005/06/21 09:54:16 leonardop Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-doc/ChangeLog,v 1.48 2005/06/24 02:15:52 leonardop Exp $
+
+  23 Jun 2005; Leonardo Boshell <leonardop@gentoo.org> gtk-doc-1.3-r1.ebuild,
+  gtk-doc-1.2-r1.ebuild, gtk-doc-1.1.ebuild:
+  Modified app-text/docbook-xml-dtd and app-text/docbook-sgml-dtd
+  dependencies so they use '~' syntax, as opposed to '=*'.
 
   22 Jun 2005; Leonardo Boshell <leonardop@gentoo.org> gtk-doc-1.3-r1.ebuild,
   gtk-doc-1.2-r1.ebuild, gtk-doc-1.1.ebuild:
